# AzerothLib

./: CMakeLists.txt  README.md  build.md
lib/: logonserverclient.cpp  logonserverclient.h  main.cpp  pch.h
shared/: CMakeLists.txt  define.h  framework.h  log.cpp  log.h
tests/: CMakeLists.txt  test.cpp
